# pyq3serverlist

./: README.md  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: getMedalOfHonorServerInfo.py  getServerInfo.py  getServers.py  getServersCoD4X.py  getServersNexuiz.py  getServersQuake.py  getServersTremulous.py
pyq3serverlist/: __init__.py  buffer.py  connection.py  exceptions.py  masterserver.py  principalserver.py  reader.py  server.py
tests/: principal_test.py  server_test.py
